<resources>
    <string name="app_name">Positive.ly</string>
    <string name="public_app_name">positive.ly</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="continue_button_login">Password-less Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="account_login">Account login</string>
    <string name="sign_in">Sign In</string>
    <string name="quotes">Quotes</string>
    <string name="podcasts">Podcasts</string>
    <string name="record">record</string>
    <string name="positively_podcasts">Positive.ly Podcasts</string>
    <string name="positively_quotes">Positive.ly Quotes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_text_podcast_detail"><![CDATA[Today I’ll be talking with Loretta Breuning PhD, founder of the inner mammal institute, Professor Emerita at Cal State East Bay, and the best-selling author of The power of Positivity, and Habits of a Healthy Brain. And that’s just what I want to talk with her about today, about how to retrain your brain to boost your serotonin, dopamine, oxytocin and endorphin levels, to help you stay happy, even during these crazy times. That plus we’ll talk about thinking of feral pigs, satisficing and the nobel prize, the importance of judging science fairs, baby chimps and mama’s crumbs, animals breaking into zoos, and what paint by number kits & redecorating have to do with anything! Self-Help and Self-Improvement Topics Include:  What does it mean our brains are wired for survival? What do happy chemicals have to do with anything? What do we need to know about oxytocin, serotonin, endorphins and dopamine What’s the vicious cycle of seeking happiness? Why don’t donuts or brownies solve our problems? How do we stop the vicious cycle? Where does love fit into the happiness equation? What can we learn from the animal kingdom about happiness? What can we learn about status from the animal kingdom? What are the challenges of a newborn baby What does mylenation have to do with anything What’s so special about a brain before age seven? Is there a way to hardwire in happiness? What does cortisol have to do with happiness, and why isn’t it so bad? Why are early memories so powerful? What’s the challenge with computer games (and shopping at themall) How do healthy habits help us deal with disappointment? What do baby chimps and mama crumbs have to do with one another What’s the importance of repetition What are habits we can put in the brain for happiness? How do we build more happiness into the brain? To find out more: https://innermammalinstitute.org/ Loretta Breuning, PhD on How to Have a Happy Brain & a Happy Life!!! Health | Happiness | Fitness | Inspiration | Motivation | Spiritual | Spirituality | Mindfulness | Meditation| Inspirational | Motivational | Self-Improvement | Self-Help | Inspire For More Info Visit: http://www.InspireNationShow.com]]></string>
    <string name="shared_thumbnail">sharedThumbnail</string>
    <string name="record_fab_transition">recordFabTransition</string>
    <string name="podcast_share_view">podcastShareView</string>
    <string name="channel_name">PodcastChannel</string>
    <string name="podcast_title">Podcast title</string>
    <string name="play_button">Play Button</string>
    <string name="sample_date">Mon May 4 GMT 5:30</string>
    <string name="quote_title">Quote Title</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="create_new_account">Create new account</string>
    <string name="by_continuing_you_agree_to_the_terms_of_service_and_n_privacy_policy">- By Continuing you agree to the Terms of Service and   Privacy policy</string>
    <string name="record_your_first_voice_log_by_pressing">Record your first Voice Log by pressing +</string>
    <string name="by_authour_sample">- By Authour</string>
    <string name="quote_title_sample">Quote Title</string>
    <string name="date_sample">5 May 2020</string>
    <string name="publish_date">Publish Date:</string>
    <string name="publishers_sample">Test Publisher 1, Test publisher 2</string>
    <string name="publishers">Publishers:</string>
    <string name="time_sample">1 hour 45 min</string>
    <string name="length">Length</string>
    <string name="terms">- By Continuing you agree to the Terms of Service and   Privacy policy</string>
    <string name="continue_with">Continue With</string>
    <string name="skip">Skip</string>
    <string name="quote_image">Quote Image</string>
    <string name="podcast_thumbnail_image">Podcast Thumbnail Image</string>
    <string name="back_button">Back Button</string>
    <string name="positive_ly_logo">positive.ly logo</string>
    <string name="no_result_found">No Result Found</string>
    <string name="quote_full_size_image_background">Quote Full Size Image Background</string>
    <string name="podcast_backdrop_image">Podcast Backdrop Image</string>
    <string name="please_enable_permissions">Please ennable the permissions</string>
    <string name="enable_btn_permission">ENABLE</string>
    <string name="voice_log_saved">Voice Log Saved</string>
    <string name="voice_log_not_saved">Voice Log not Saved</string>
    <string name="ongoing_voice_log">You have an ongoing voice log, do you want to discard it</string>
    <string name="Some_Error_Occured">Some error occurred..</string>
    <string name="Invalid_email">Invalid email</string>
    <string name="Required">Required</string>
    <string name="signed_in">Signed In</string>
    <string name="verification_email_sent">Verification email Sent</string>
    <string name="error_reauthenticating">Error reauthenticating</string>
    <string name="email_updated_to">Email updated to</string>
    <string name="check_email">Check Email</string>
    <string name="link_sent_message">A link has been sent to your email account, you can use that to sign in</string>
    <string name="email_not_verified">Email is not verified</string>
    <string name="something_went_wrong">Something Went Wrong…</string>
    <string name="click_here_to_log_in">Click to Log In/Sign Up</string>
    <string name="user_plain_text">User</string>
    <string name="sign_out">Sign Out</string>
    <string name="build_version">Build Version:</string>
    <string name="get_download_now">I found this quote on positive.ly Download Now:- **Link**</string>
    <string name="share_subject">Positive.ly Quote</string>
    <string name="share_using">Share Using</string>
    <string name="positive_ly_quote_title">Positive.ly Quote</string>
    <string name="positive_ly_voice_logs">Positive.ly Voice Logs</string>
    <string name="acount_success_creation">Your account was successfully created.</string>
    <string name="hi">Hi</string>
    <string name="min_password_length_error">Password should be at least 6 characters</string>
    <string name="email_not_valid">Email Not Valid</string>
    <string name="passwords_do_not_match">Passwords Do Not Match</string>
    <string name="check_internet_before_playing_audio">Internet Connection needed to stream the audio. Please Check your Network Connection</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="random_quote_initializer">Random quote will appear here, once the app is re-started</string>
    <string name="oops_network_error">Oops! Network Error, Please Check Your Connection</string>
    <string name="no_internet">No Internet</string>
    <string name="listennotes_requirement">Powered By ListenNotes API</string>
    <string name="no_server_response">Oops! No Response from Sever, Please try restarting the app.</string>
    <string name="press_back_again">Please click BACK again to exit</string>
    <string name="check_network_main">Please Check Your Network Connection</string>
    <string name="show_all_quotes">Show All Quotes</string>
    <string name="show_only_favorite_quotes">Show Favorite Quotes</string>
    <string name="no_favorites_selected">No Favorites Selected</string>
    <string name="user_fav_quotes">Favourite Quotes</string>
    <string name="drop_down_button">Drop Down Button</string>
    <string name="rewind_10_second">Rewind 10 Second</string>
    <string name="repeat_exo_player_custom">Repeat</string>
    <string name="play_exo_custom">Play</string>
    <string name="pause_exo_custom">Pause</string>
    <string name="forward_10_seconds">Forward 10 Seconds</string>
    <string name="podcast_backdrop">Podcast Backdrop</string>
    <string name="oops_something_went_wrong_fragment_podcast">Oops! Something Went Wrong. . .</string>
    <string name="widget_title">Random Quote:</string>
</resources>
