<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.PodcastDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/podcast_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/podcast_backdrop_image"
                android:adjustViewBounds="true"
                android:foreground="@drawable/image_overlay_dark"
                android:scaleType="centerCrop"
                android:src="@drawable/image_overlay"
                android:transitionName="@string/shared_thumbnail"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/podcast_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
        >
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/podcast_relative_layout"
                    android:layout_width="200dp"
                    android:layout_height="200dp">

                    <ImageView
                        android:id="@+id/podcast_thumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/logo"
                        android:contentDescription="@string/podcast_thumbnail_image"/>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/podcast_play"
                        android:layout_width="wrap_content"
                        android:transitionName="@string/podcast_share_view"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_play_arrow_black_24dp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/length"
                        android:textAlignment="center"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/podcast_length"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:text="@string/time_sample"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/podcast_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:maxLines="8"
                android:animateLayoutChanges="true"
                android:text="@string/sample_text_podcast_detail"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/podcast_click_to_expand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/ic_arrow_drop_down_black_24dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/publishers"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/podcast_publishers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="casual"
                android:text="@string/publishers_sample"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/publish_date"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/podcast_publish_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="casual"
                android:text="@string/date_sample"
                android:textColor="@color/black" />
            <com.google.android.gms.ads.AdView
                android:layout_gravity="bottom"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:layout_marginTop="30dp"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/BANNER_AD_ID">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>