<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_overlay_dark"
    tools:context=".view.activity.QuoteDetailActivity">

    <include layout="@layout/app_bar" />

    <RelativeLayout
        android:id="@+id/quotelRl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:layout_marginBottom="?actionBarSize">

        <ImageView
            android:id="@+id/quote_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:contentDescription="@string/quote_full_size_image_background"
            android:foreground="@drawable/image_overlay_dark"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:transitionName="@string/shared_thumbnail" />

        <TextView
            android:id="@+id/quote_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="4dp"
            android:layout_marginBottom="20dp"
            android:text="@string/quote_title_sample"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/quote_authour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_authour_sample"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:src="@drawable/ic_share_black_24dp" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        ads:adSize="BANNER"
        ads:adUnitId="@string/BANNER_AD_ID"></com.google.android.gms.ads.AdView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>